update markdown syntax

--- a/Lab1-git.ipynb
+++ b/Lab1-git.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +246,8 @@
      "text": [
       "LICENSE\n",
       "README.md\n",
-      "hello.md\n"
+      "hello.md\n",
+      "world.md\n"
      ]
     }
    ],
@@ -259,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Poking around"
+    "### Poking around"
    ]
   },
   {
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -284,6 +285,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "commit 4307abbdca44f0ecb3d62ef26667db2babc1ef8d\n",
+      "Author: Rahul Dave <rahuldave@gmail.com>\n",
+      "Date:   Sun Sep 6 14:12:13 2015 -0400\n",
+      "\n",
+      "    When you dont provide a message using -m it pops\n",
+      "    up an editor for you. Your commit message ought to be better than this. Lets do better:\n",
+      "    \n",
+      "    Created a new file world.md with junk in it\n",
+      "\n",
+      "commit 2442365c7b4f2ec26729a0e96dd8a8ad622e894f\n",
+      "Author: Rahul Dave <rahuldave@gmail.com>\n",
+      "Date:   Sun Sep 6 13:22:02 2015 -0400\n",
+      "\n",
+      "    change to hello world\n",
+      "\n",
       "commit 7ba94f7e4ed9506b0b3eab02e03d516c2b38977e\n",
       "Author: Rahul Dave <rahuldave@gmail.com>\n",
       "Date:   Tue Sep 1 22:53:03 2015 -0400\n",
@@ -362,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -2138,7 +2154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
