--- a/Lab1-pythonpandas.ipynb
+++ b/Lab1-pythonpandas.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Lab 1. An Introduction to Pandas and Python"
+    "#Lab 1. An Introduction to Pandas and Python\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# heading"
    ]
   },
   {
@@ -13,7 +20,16 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/abhinav/anaconda/lib/python2.7/site-packages/matplotlib/__init__.py:872: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
+      "  warnings.warn(self.msg_depr % (key, alt_key))\n"
+     ]
+    }
+   ],
    "source": [
     "# The %... is an iPython thing, and is not part of the Python language.\n",
     "# In this case we're just telling the plotting library to draw things on\n",
@@ -82,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +202,7 @@
        "4    4.23        34772  0679783261  good_reads:book  https://www.goodreads.com/author/show/1265.Jan...  1813  /genres/classics|/genres/fiction|/genres/roman...                dir01/1885.Pride_and_Prejudice.html      1388992                                Pride and Prejudice"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,12 +224,12 @@
     "\n",
     "![](files/pandastruct.png)\n",
     "\n",
-    "###The basics"
+    "### The basics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +250,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +308,7 @@
        "(6000, 10)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -321,13 +337,96 @@
        "Index([u'rating', u'review_count', u'isbn', u'booktype', u'author_url', u'year', u'genre_urls', u'dir', u'rating_count', u'name'], dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       4.40\n",
+       "1       4.41\n",
+       "2       3.56\n",
+       "3       4.23\n",
+       "4       4.23\n",
+       "5       4.25\n",
+       "6       4.22\n",
+       "7       4.38\n",
+       "8       3.79\n",
+       "9       4.18\n",
+       "10      4.03\n",
+       "11      3.72\n",
+       "12      4.36\n",
+       "13      4.05\n",
+       "14      3.72\n",
+       "15      4.09\n",
+       "16      3.92\n",
+       "17      4.58\n",
+       "18      3.60\n",
+       "19      4.28\n",
+       "20      4.02\n",
+       "21      4.14\n",
+       "22      4.11\n",
+       "23      4.20\n",
+       "24      3.75\n",
+       "25      3.94\n",
+       "26      4.43\n",
+       "27      3.79\n",
+       "28      4.04\n",
+       "29      3.94\n",
+       "        ... \n",
+       "5970    3.97\n",
+       "5971    4.24\n",
+       "5972    4.19\n",
+       "5973    4.17\n",
+       "5974    3.99\n",
+       "5975    4.07\n",
+       "5976    4.23\n",
+       "5977    4.03\n",
+       "5978    3.99\n",
+       "5979    2.77\n",
+       "5980    3.84\n",
+       "5981    3.36\n",
+       "5982    4.09\n",
+       "5983    4.23\n",
+       "5984    4.02\n",
+       "5985    3.61\n",
+       "5986    4.06\n",
+       "5987    4.26\n",
+       "5988    4.34\n",
+       "5989    3.36\n",
+       "5990    4.12\n",
+       "5991    4.20\n",
+       "5992    3.89\n",
+       "5993    4.09\n",
+       "5994    4.37\n",
+       "5995    4.17\n",
+       "5996    3.99\n",
+       "5997    3.78\n",
+       "5998    3.91\n",
+       "5999    4.35\n",
+       "Name: rating, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.rating"
    ]
   },
   {
@@ -460,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -471,13 +570,114 @@
        "4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.sum(df.rating < 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rating</th>\n",
+       "      <th>review_count</th>\n",
+       "      <th>isbn</th>\n",
+       "      <th>booktype</th>\n",
+       "      <th>author_url</th>\n",
+       "      <th>year</th>\n",
+       "      <th>genre_urls</th>\n",
+       "      <th>dir</th>\n",
+       "      <th>rating_count</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2609</th>\n",
+       "      <td>2.90</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/7707820....</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>/genres/romance|/genres/realistic-fiction|/gen...</td>\n",
+       "      <td>dir27/19546932-how-to-be-a-perfect-girl.html</td>\n",
+       "      <td>31</td>\n",
+       "      <td>How To Be A Perfect Girl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3738</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>368</td>\n",
+       "      <td>0983650322</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/9414.Vic...</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>/genres/young-adult|/genres/science-fiction|/g...</td>\n",
+       "      <td>dir38/12393909-revealing-eden.html</td>\n",
+       "      <td>688</td>\n",
+       "      <td>Revealing Eden (Save the Pearls, #1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5844</th>\n",
+       "      <td>2.97</td>\n",
+       "      <td>1399</td>\n",
+       "      <td>0395083621</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/30691.Ad...</td>\n",
+       "      <td>1925</td>\n",
+       "      <td>/genres/history|/genres/non-fiction|/genres/bi...</td>\n",
+       "      <td>dir59/54270.Mein_Kampf.html</td>\n",
+       "      <td>12417</td>\n",
+       "      <td>Mein Kampf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5979</th>\n",
+       "      <td>2.77</td>\n",
+       "      <td>800</td>\n",
+       "      <td>0060988649</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/7025.Gre...</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>/genres/fantasy|/genres/fiction|/genres/myster...</td>\n",
+       "      <td>dir60/24929.Lost.html</td>\n",
+       "      <td>11128</td>\n",
+       "      <td>Lost</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      rating review_count        isbn         booktype                                         author_url  year                                         genre_urls                                           dir rating_count                                  name\n",
+       "2609    2.90            8         NaN  good_reads:book  https://www.goodreads.com/author/show/7707820....  2013  /genres/romance|/genres/realistic-fiction|/gen...  dir27/19546932-how-to-be-a-perfect-girl.html           31              How To Be A Perfect Girl\n",
+       "3738    2.00          368  0983650322  good_reads:book  https://www.goodreads.com/author/show/9414.Vic...  2011  /genres/young-adult|/genres/science-fiction|/g...            dir38/12393909-revealing-eden.html          688  Revealing Eden (Save the Pearls, #1)\n",
+       "5844    2.97         1399  0395083621  good_reads:book  https://www.goodreads.com/author/show/30691.Ad...  1925  /genres/history|/genres/non-fiction|/genres/bi...                   dir59/54270.Mein_Kampf.html        12417                            Mein Kampf\n",
+       "5979    2.77          800  0060988649  good_reads:book  https://www.goodreads.com/author/show/7025.Gre...  2001  /genres/fantasy|/genres/fiction|/genres/myster...                         dir60/24929.Lost.html        11128                                  Lost"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.rating < 3]"
    ]
   },
   {
@@ -626,7 +826,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Filtering\n",
+    "### Filtering\n",
     "\n",
     "Here are two ways to get a filtered dataframe"
    ]
@@ -635,7 +835,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1544,7 +1744,8 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2070,7 +2271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Cleaning"
+    "### Cleaning"
    ]
   },
   {
@@ -2938,7 +3139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
