--- a/Lab1-git.ipynb
+++ b/Lab1-git.ipynb
@@ -1150,10 +1150,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Example\n",
     "$ git checkout my-new-branch"
    ]
   },
